--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/navbar/navbar.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/navbar/navbar.css
@@ -58,14 +58,18 @@
 	list-style-image: url(home-1x.svg) !important;
 }
 
-#navigator-toolbox #sync-button
+#fxa-avatar-image
 {
-	list-style-image: url(profile.svg) !important;
+	border-radius: 0 !important;
+	list-style-image: url(profile-inactive.svg) !important;
+	
+	/* icon should be 20px, but we don't want to affect button size */
+	transform: scale(1.25) !important;
 }
 
-#navigator-toolbox #sync-button .toolbarbutton-icon
+:root[fxastatus=signedin] #fxa-avatar-image
 {
-	transform: scale(calc(1 + 1 / 16));
+	list-style-image: url(profile.svg) !important;
 }
 
 #nav-bar-customization-target
