--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/tabbar/tabbar.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/tabbar/tabbar.css
@@ -71,32 +71,14 @@
 	display: -moz-box !important;
 }
 
-:-moz-any(.titlebar-placeholder, .titlebar-spacer)type=post-tabs]
+:-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=post-tabs]
 {
-	width: 0 !important;
+	width: 38px !important;
 }
 
-/* add space at end of tab bar if no buttons present */
-#TabsToolbar:-moz-any(
-	[currentset$="tabbrowser-tabs"],
-	[currentset$="tabbrowser-tabs,alltabs-button"],
-	[currentset$="tabbrowser-tabs,new-tab-button"],
-	[currentset$="tabbrowser-tabs,alltabs-button,new-tab-button"],
-	[currentset$="tabbrowser-tabs,new-tab-button,alltabs-button"]
-) :-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=post-tabs]
+#tabbrowser-tabs .arrowscrollbox-scrollbox
 {
-	width: 46px !important;
-}
-
-#tabbrowser-tabs:not([overflow]) .arrowscrollbox-scrollbox
-{
-	margin: 0 -8px !important;
-	padding-inline-start: 8px !important;
-}
-
-#tabbrowser-tabs .scrollbox-innerbox
-{
-	margin: 0 8px !important;
+	padding: 0 8px !important;
 }
 
 /* vertically center buttons in tab scroll area */
@@ -110,7 +92,7 @@
 {
 	min-height: var(--tab-min-height) !important;
 	overflow: visible !important;
-	font-size: 15px !important;
+	font-size: 12px !important;
 	background: 0 !important;
 	border: 0 !important;
 }
@@ -184,38 +166,40 @@
 
 .tab-background
 {
-	-moz-context-properties: fill, fill-opacity !important;
-	background-color: transparent !important;
-	background-image:
-		-moz-image-rect(url(tab.svg), 0, 25%, 25%, 0),
-		-moz-image-rect(url(tab.svg), 0, 100%, 25%, 75%),
-		-moz-image-rect(url(tab.svg), 25%, 25%, 75%, 0),
-		-moz-image-rect(url(tab.svg), 25%, 100%, 75%, 75%),
-		-moz-image-rect(url(tab.svg), 75%, 25%, 100%, 0),
-		-moz-image-rect(url(tab.svg), 75%, 100%, 100%, 75%),
-		-moz-image-rect(url(tab.svg), 0, 75%, 100%, 25%) !important;
-	background-size:
-		16px 8px, 16px 8px,
-		16px calc(100% - 16px), 16px calc(100% - 16px),
-		16px 8px, 16px 8px,
-		calc(100% - 32px) 100% !important;
-	background-position:
-		left top, right top,
-		left 8px, right 8px,
-		left bottom, right bottom,
-		16px top !important;
-	background-repeat: no-repeat !important;
-	background-attachment: local !important;
-	margin: 0 -8px !important;
+	background: var(--toolbar-bgcolor) !important;
+	/* rounded top corners */
+	border-radius: 8px 8px 0 0 !important;
+	position: relative !important;
 	border: 0 !important;
-	transition:
-		fill .2s var(--ease-basic),
-		fill-opacity .2s var(--ease-basic) !important;
-	fill: var(--toolbar-bgcolor) !important;
-	fill-opacity: 0 !important;
-	
-	/* required due to negative margin */
+	transition: opacity .2s var(--ease-basic) !important;
+	opacity: 0 !important;
+}
+
+/* rounded bottom corners */
+.tab-background::before,
+.tab-background::after
+{
+	content: "" !important;
+	display: -moz-box !important;
+	position: absolute !important;
+	width: 8px !important;
+	height: 8px !important;
+	bottom: 0 !important;
 	pointer-events: none !important;
+}
+
+.tab-background::before
+{
+	border-bottom-right-radius: 8px !important;
+	left: -8px !important;
+	box-shadow: 4px 4px 0 4px var(--toolbar-bgcolor) !important;
+}
+
+.tab-background::after
+{
+	border-bottom-left-radius: 8px !important;
+	right: -8px !important;
+	box-shadow: -4px 4px 0 4px var(--toolbar-bgcolor) !important;
 }
 
 .tabbrowser-tab[visuallyselected][style*=transform] + .tabbrowser-tab[style*=transform] .tab-content::after,
@@ -229,12 +213,12 @@
 
 .tabbrowser-tab:hover .tab-background
 {
-	fill-opacity: var(--tab-hover-fill-opacity) !important;
+	opacity: var(--tab-hover-fill-opacity) !important;
 }
 
 .tabbrowser-tab[multiselected] .tab-background
 {
-	fill-opacity: var(--tab-focus-fill-opacity) !important;
+	opacity: var(--tab-focus-fill-opacity) !important;
 }
 
 .tabbrowser-tab[visuallyselected]
@@ -245,7 +229,7 @@
 .tabbrowser-tab[visuallyselected] .tab-background
 {
 	transition: none !important;
-	fill-opacity: 1 !important;
+	opacity: 1 !important;
 }
 
 .tab-throbber,
