--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/global/global.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/global/global.css
@@ -67,6 +67,13 @@
 	background-clip: padding-box !important;
 }
 
+#navigator-toolbox :-moz-any(.toolbarbutton-1, scrollbutton-up, .scrollbutton-down)
+{
+	max-height: 32px !important;
+	height: 32px !important;
+	min-height: 32px !important;
+}
+
 #navigator-toolbox :-moz-any(.toolbarbutton-1, toolbarbutton.bookmark-item:not(.subviewbutton), .scrollbutton-up, .scrollbutton-down)[disabled]
 {
 	opacity: .42 !important;
@@ -125,13 +132,25 @@
 	fill: currentColor !important;
 }
 
+/* legacy */
+#navigator-toolbox
+{
+	border-bottom: 1px solid var(--chrome-content-separator-color, var(--toolbox-border-bottom-color)) !important;
+}
+
+/* legacy */
+#navigator-toolbox::after
+{
+	display: none !important;
+}
+
 /* high DPI adjustments */
 @media (min--moz-device-pixel-ratio: 2)
 {
- 	#navigator-toolbox::after
+	#navigator-toolbox
 	{
-		-moz-appearance: none !important;
-		background-color: var(--toolbar-bgcolor) !important;
-		box-shadow: inset 0 -.5px var(--toolbox-border-bottom-color) !important;
+		border-bottom-width: .5px !important;
+		padding-bottom: .5px !important;
+		box-shadow: inset 0 -.5px var(--toolbar-bgcolor) !important;
 	}
 }
