--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/tabbar/tabbar.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/tabbar/tabbar.css
@@ -1,3 +1,8 @@
+#TabsToolbar
+{
+	padding-inline-end: 2px !important;
+}
+
 :-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=pre-tabs]
 {
 	width: 0 !important;
@@ -25,7 +30,7 @@
 	
 	:-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=pre-tabs]
 	{
-		width: 4px !important;
+		width: 12px !important;
 	}
 }
 
@@ -59,27 +64,21 @@
 :-moz-any(.titlebar-placeholder, .titlebar-spacer)
 {
 	border: 0 !important;
+}
+
+:-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=pre-tabs]
+{
 	display: -moz-box !important;
 }
 
 :-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=post-tabs]
 {
-	width: 48px !important;
-	transition: width .666s cubic-bezier(.4, 0, .2, 1) !important;
-}
-
-@media (max-width: 700px)
-{
-	:-moz-any(.titlebar-placeholder, .titlebar-spacer)[type=post-tabs]
-	{
-		width: 8px !important;
-	}
+	width: 38px !important;
 }
 
 #tabbrowser-tabs .arrowscrollbox-scrollbox
 {
-	padding-inline-start: 8px !important;
-	padding-inline-end: 8px !important;
+	padding: 0 8px !important;
 }
 
 /* vertically center buttons in tab scroll area */
@@ -96,42 +95,6 @@
 	font-size: 12px !important;
 	background: 0 !important;
 	border: 0 !important;
-	opacity: 1 !important;
-	transition:
-		min-width .2s cubic-bezier(.4, 0, .2, 1),
-		max-width .2s cubic-bezier(.4, 0, .2, 1),
-		opacity .1s linear !important;
-}
-
-/* regular */
-.tabbrowser-tab[fadein]:not([pinned])
-{
-	max-width: 240px !important;
-/* 	transition-duration: .2s, .2s, .1s !important; */
-}
-
-/* collapsing */
-.tabbrowser-tab:not([fadein]):not([pinned])
-{
-	display: -moz-box !important;
-	visibility: visible !important;
-	opacity: 0 !important;
-	pointer-events: none !important;
-}
-
-/* show label while collapsing */
-.tab-label:not([fadein]):not([pinned])
-{
-	display: -moz-box !important;
-}
-
-/* show tab contents while collapsing */
-.tab-icon-pending:not([fadein]),
-.tab-icon-image:not([fadein]),
-.tab-close-button:not([fadein]),
-.tab-background:not([fadein])
-{
-	visibility: visible !important;
 }
 
 /* neighbouring tabs should "pinch" together */
@@ -147,9 +110,9 @@
 	margin-inline-start: -.5px !important;
 }
 
-#tabbrowser-tabs[overflow] .tabbrowser-tab[pinned] .tab-background
+#tabbrowser-tabs[overflow] .tabbrowser-tab:not([first-visible-tab])[pinned] .tab-stack
 {
-	margin: 0 -1px !important;
+	margin-inline-start: -2px !important;
 }
 
 .tab-content
@@ -210,7 +173,6 @@
 	border: 0 !important;
 	transition: opacity .2s var(--ease-basic) !important;
 	opacity: 0 !important;
-	visibility: visible !important;
 }
 
 /* rounded bottom corners */
@@ -229,16 +191,14 @@
 .tab-background::before
 {
 	border-bottom-right-radius: 8px !important;
-	left: 0 !important;
-	transform: translateX(-8px) !important;
+	left: -8px !important;
 	box-shadow: 4px 4px 0 4px var(--toolbar-bgcolor) !important;
 }
 
 .tab-background::after
 {
 	border-bottom-left-radius: 8px !important;
-	right: 0 !important;
-	transform: translateX(8px) !important;
+	right: -8px !important;
 	box-shadow: -4px 4px 0 4px var(--toolbar-bgcolor) !important;
 }
 
@@ -246,14 +206,9 @@
 .tabbrowser-tab[style*=transform]:not([visuallyselected]) .tab-content::before,
 .tabbrowser-tab[style*=transform] + .tabbrowser-tab:not([visuallyselected]) .tab-content::before,
 .tabbrowser-tab:not([visuallyselected]):not(:hover):not([multiselected]) + .tabbrowser-tab:not([visuallyselected]):not(:hover):not([multiselected]) .tab-content::before,
-#tabbrowser-tabs[hasadjacentnewtabbutton]:not([overflow]) .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not(:hover):not([multiselected]) .tab-content::after
+#tabbrowser-tabs[hasadjacentnewtabbutton] .tabbrowser-tab[last-visible-tab]:not([visuallyselected]):not(:hover):not([multiselected]) .tab-content::after
 {
 	opacity: var(--tab-separator-opacity) !important;
-}
-
-#tabbrowser-tabs[overflow] .tabbrowser-tab[pinned] + .tabbrowser-tab:not([pinned]) .tab-content::before
-{
-	opacity: 0 !important;
 }
 
 .tabbrowser-tab:hover .tab-background
@@ -335,32 +290,26 @@
 	background-color: var(--toolbarbutton-active-background) !important;
 }
 
-@keyframes rotate-360
-{
-	0% { transform: rotate(0); }
-	100% { transform: rotate(1turn); }
-}
-
 .tab-throbber
 {
-	-moz-context-properties: fill !important;
+	-moz-context-properties: fill, fill-opacity !important;
 	fill: currentColor !important;
+	fill-opacity: .7 !important;
 	background-image: url(spinner-busy.svg) !important;
 	margin: 0 !important;
-	transform-origin: center !important;
-	animation: rotate-360 1.333s linear infinite reverse !important;
-	position: static !important;
+}
+
+.tab-throbber::before,
+.tab-throbber-fallback
+{
+	display: none !important;
 }
 
 .tab-throbber[progress]
 {
+	fill: var(--tab-loading-fill) !important;
+	fill-opacity: 1 !important;
 	background-image: url(spinner-progress.svg) !important;
-	animation-direction: normal !important;
-}
-
-.tab-throbber::before
-{
-	display: none !important;
 }
 
 /* clipped tabs */
@@ -386,13 +335,19 @@
     mask-image: linear-gradient(to left, black 70%, transparent) !important;
 }
 
+/* overflowing and pinned tabs */
+#tabbrowser-tabs[overflow] .tabbrowser-tab[pinned]
+{
+	/* gives scrollbutton-up extra room */
+	transform: translateX(-8px) !important;
+}
+
 .tab-content[pinned]
 {
 	-moz-box-pack: center !important;
 }
 
-.tab-icon-image[pinned],
-.tab-throbber[pinned]
+.tab-icon-image[pinned]
 {
 	margin: auto !important;
 }
@@ -401,25 +356,18 @@
 {
 	width: 36px !important;
 	padding: 0 !important;
-	padding-inline-start: 10px !important;
+	padding-inline-start: 0 !important;
 	padding-inline-end: 0 !important;
 }
 
-.tab-label-container[pinned],
-.tab-close-button[pinned]
+:-moz-any(.tab-label-container, .tab-close-button)[pinned]
 {
-	visibility: hidden !important;
-} 
+	display: none !important;
+}
 
 /* close button / favicon is centered within 36px tab */
 @supports -moz-bool-pref("materialFox.reduceTabOverflow")
 {
-	#main-window
-	{
-		/* same as Chrome */
-		min-width: 500px !important;
-	}
-	
 	#tabbrowser-tabs[overflow] .tab-content
 	{
 		-moz-box-pack: center !important;
@@ -452,38 +400,43 @@
 }
 
 .tabs-newtab-button,
-#new-tab-button,
 /* Simple New Tab Button */
 #TabsToolbar #_42b6f73f-e197-466e-9059-bd40982e88ce_-browser-action
 {
 	list-style-image: url(new-tab.svg) !important;
 }
 
-#tabbrowser-tabs[overflow] .arrowscrollbox-scrollbox
+.arrowscrollbox-overflow-start-indicator,
+.arrowscrollbox-overflow-end-indicator
 {
-	border-radius: 8px 8px 0 0 !important;
-	background-color: rgba(0, 0, 0, .2) !important;
-	padding-inline-start: 0 !important;
+	width: 1px !important;
+	margin: 7px -.5px !important;
+	background: currentColor !important;
+	opacity: var(--tab-separator-opacity) !important;
 }
 
-#tabbrowser-tabs[overflow] .tabbrowser-tab[first-visible-tab]:not([pinned]),
-#tabbrowser-tabs[overflow] .tabbrowser-tab[pinned] + .tabbrowser-tab:not([pinned])
+/* macOS */
+@media (-moz-mac-yosemite-theme)
 {
-	margin-inline-start: 8px !important;
-}
-
-#tabbrowser-tabs .arrowscrollbox-overflow-start-indicator,
-#tabbrowser-tabs .arrowscrollbox-overflow-end-indicator
-{
-	display: none !important;
+	#titlebar-buttonbox-container
+	{
+		-moz-box-align: start !important;
+		margin-inline-start: 0 !important;
+		margin-block-start: 10px !important;
+	}
+	
+	:root[extradragspace] #titlebar-buttonbox-container
+	{
+		margin-block-start: 13px !important;
+	}
 }
 
 /* high DPI adjustments */
 @media (min--moz-device-pixel-ratio: 2)
 {
 	.tabbrowser-tab::before,
-	#tabbrowser-tabs .arrowscrollbox-overflow-start-indicator,
-	#tabbrowser-tabs .arrowscrollbox-overflow-end-indicator
+	.arrowscrollbox-overflow-start-indicator,
+	.arrowscrollbox-overflow-end-indicator
 	{
 		transform: translateY(.5px) !important;
 	}
@@ -496,10 +449,14 @@
 	/* macOS */
 	@media (-moz-mac-yosemite-theme)
 	{
-		.titlebar-buttonbox
+		#titlebar-buttonbox-container
 		{
-			margin-top: .5px !important;
-			margin-bottom: -.5px !important;
+			margin-block-start: 9.5px !important;
+		}
+		
+		:root[extradragspace] #titlebar-buttonbox-container
+		{
+			margin-block-start: 13.5px !important;
 		}
 	}
 }
