Add simpleMenuWizard, custom context menu hiding

--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/userChrome.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/userChrome.css
@@ -7,7 +7,9 @@
 @import "manual/findbar.css";
 @import "manual/manual.css";
 @import "manual/roomy.css";
+@import "manual/simpleMenuWizard.css";
 
+/*Below adds custom js loading*/
 /*
 toolbarbutton#alltabs-button {
     -moz-binding: url("userChrome.xml#js");
