Update Material Fox

--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/popup/popup.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/popup/popup.css
@@ -100,7 +100,7 @@ menuseparator
 	margin: 5px 0 !important;
 }
 
-/*.menu-iconic-icon,*/
+.menu-iconic-icon,
 .menu-right,
 .ac-site-icon,
 .ac-type-icon
