update MaterialFox, add fix for dropshadow in searchbar in manual.css. remove cache files in /Scripts

--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/manual/manual.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/manual/manual.css
@@ -24,3 +24,11 @@
 		background: #1a1a1a !important;
 	}
 }
+
+
+/* urlbar and searchbar autocomplete popup */
+/* Fix Materialfox search bar shadow */
+#PopupAutoCompleteRichResult
+{
+	filter: unset !important;
+}
