--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/global/global.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/global/global.css
@@ -1,34 +1,46 @@
 @media (-moz-windows-compositor)
 {
-	@media not all and (-moz-os-version: windows-win7)
-	{
-		@media not all and (-moz-os-version: windows-win8)
+	@media not (-moz-os-version: windows-win7)
+  	{
+    	@media not (-moz-os-version: windows-win8)
 		{
-			@media (-moz-windows-default-theme)
-			{
-				:root[sizemode=normal][tabsintitlebar]:-moz-window-inactive:not(:-moz-lwtheme)
+      		@media (-moz-windows-default-theme)
+	  		{
+				:root[tabsintitlebar] .titlebar-buttonbox-container
 				{
-					border-top-color: hsl(0, 0%, 64%) !important;
-					background-color: -moz-win-accentcolor !important;
-					background-image: linear-gradient(hsla(0, 0%, 100%, .5), hsla(0, 0%, 100%, .5)) !important;
+					height: 30px !important;
 				}
 				
-				:root[tabsintitlebar] #titlebar-buttonbox
+				:root[tabsintitlebar][sizemode=normal] .titlebar-buttonbox-container
 				{
-					height: 29px !important;
-					margin-bottom: 5px !important;
+					margin-block-start: calc(0px - (var(--space-above-tabbar) + 5px)) !important;
 				}
 				
-				:root[tabsintitlebar][sizemode=normal] #titlebar-buttonbox
+				:root[tabsintitlebar][sizemode=maximized] .titlebar-buttonbox-container
 				{
-					margin-bottom: calc(5px + var(--space-above-tabbar)) !important;
+					margin-block-start: calc(0px - (var(--space-above-tabbar))) !important;
 				}
-			}
+				
+        		@media (-moz-windows-accent-color-in-titlebar: 0)
+				{					
+        		  	:root[tabsintitlebar]:not(:-moz-lwtheme)
+					{
+        		    	background-color: #dee1e6 !important;
+        		    	color: #3c4043 !important;
+        		  	}
+					
+					:root[tabsintitlebar]:not(:-moz-lwtheme):-moz-window-inactive
+					{
+        		    	background-color: #e7eaed !important;
+        		    	color: #666a6d !important;
+        		  	}
+        		}
+      		}
 		}
 	}
 }
 
-#navigator-toolbox :-moz-any(toolbar, #nav-bar-customization-target)
+#navigator-toolbox :-moz-any(toolbar, #nav-bar-customization-target):not(#toolbar-menubar)
 {
 	-moz-box-align: center !important;
 }
