--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/manual/simpleMenuWizard/urlbar-pageaction.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/manual/simpleMenuWizard/urlbar-pageaction.css
@@ -9,6 +9,7 @@
 
 /* #pageAction-panel-bookmark,                  /* Bookmark This Page   */
 /* #pageAction-panel-pocket,                    /* Save Page to Pocket  */
+/* #pageAction-panel-pinTab,                    /* Pin Tab              */
 /* #pageAction-panel-bookmarkSeparator,         /****** Separator *******/
 /* #pageAction-panel-copyURL,                   /* Copy Link            */
 /* #pageAction-panel-emailLink,                 /* Email Link…          */
