--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/tabbar/tabbar.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/tabbar/tabbar.css
@@ -99,7 +99,7 @@
 }
 
 /* regular */
-.tabbrowser-tab[fadein]:not([pinned])
+.tabbrowser-tab[fadein]:not([pinned]):not([style*="max-width"])
 {
 	max-width: 240px !important;
 }
