--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/manual/manual.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/manual/manual.css
@@ -27,8 +27,9 @@
 
 
 /* urlbar and searchbar autocomplete popup */
-/* Fix Materialfox search bar shadow */
+/* Fix Materialfox search bar shadow 
 #PopupAutoCompleteRichResult
 {
 	filter: unset !important;
 }
+*/
