--- a/.mozilla/firefox/lkpdw7o4.default-beta/chrome/userChrome.css
+++ b/.mozilla/firefox/lkpdw7o4.default-beta/chrome/userChrome.css
@@ -1,9 +1,12 @@
 @import "global/variables.css";
 @import "global/global.css";
+@import "icons/icons.css";
 @import "tabbar/tabbar.css";
 @import "navbar/navbar.css";
 @import "personalbar/personalbar.css";
 @import "popup/popup.css";
+@import "popup/urlbar-results.css";
+
 @import "manual/findbar.css";
 @import "manual/manual.css";
 @import "manual/roomy.css";
