--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -6,7 +6,7 @@
 */
 
 atom-text-editor {
-//  font-family: 'Fira Code';
+  font-family: 'Fira Code';
   font-style: normal;
   text-rendering: optimizeLegibility;
 }
@@ -29,7 +29,7 @@ atom-text-editor.editor {
   .syntax--source.syntax--js.syntax--jsx,
   .syntax--storage.syntax--type.syntax--function.syntax--arrow.syntax--js,
   .syntax--variable {
-//    font-family: 'Fira Code';
+    font-family: 'Fira Code';
     font-style: normal;
   }
 }
