Fix Materialfox and findbar for >v71, remove unused javascript support

--- a/.mozilla/firefox/m6ar4kzt.default-beta/chrome/manual/findbar.css
+++ b/.mozilla/firefox/m6ar4kzt.default-beta/chrome/manual/findbar.css
@@ -23,6 +23,7 @@
 }
 
 findbar {
+        display: block !important;
 	animation: 0.2s scale-in;
 	transform-origin: top center;
 	background: var(--toolbar-bgcolor) !important;
